src/test/resources/testinput/parsable/symtab/invalid_coco/invalidContextHasOnlyOneType.ocl
/* (c) https://github.com/MontiCore/monticore */
import example.CDs.AuctionCD.*;

ocl invalidContextHasOnlyOneType {
  context Auction, Policy
  inv: true;
}
